--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,7 @@
 @charset "utf-8";
+@import url("segundo.css") screen;
+
+
 /* CSS Document */
 .clase1{
     color: red;
@@ -14,9 +17,10 @@
 	border: solid 10px red;
 }
 p {
-    color: #F02B9F !important;
+    color: #0D740C !important;
     text-decoration: overline !important;
-    font-size: 20px;	
+    font-size: 20px;
+    text-align: center;
 }
 .pp{
     color: red;
@@ -49,5 +53,6 @@ p {
     border-collapse: separate;
 }
 
-@media (max-width: 1004px){
+@media screen{
+	p{color: red;}
 }
